feat(hub): direct client hardening (watchdog, null audio, pack.mcmeta)